--- a/.editorconfig
+++ b/.editorconfig
@@ -9,11 +9,12 @@ charset = utf-8
 end_of_line = lf
 indent_style = space
 insert_final_newline = false
+indent_size = 2
 
 # 4 space indentation for php-files
 [*.php]
 indent_size = 4
 
 # 2 space override
-[*.ini]
+[*.view.php, *.part.php]
 indent_size = 2
